--- a/views/admin/detail.ejs
+++ b/views/admin/detail.ejs
@@ -1,6 +1,4 @@
-<div class="container">
-    <div class="row">
-        <div class="col">
+<div class="container-table100 detail-forAdmin">
             <div class="shadow-lg d-block shadow text-center" style="width: 100%;min-height: 630px;margin-top: 119px;background-color: rgba(255,255,255,0.79);">
                 <form style="padding-top: 70px;" method="post" action="sendmess?key=<%= poster._id %>">
                     <div class="form-group">
