--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -16,8 +16,9 @@
   <link rel="stylesheet" href="/assets/css/Animation.css">
   <link rel="stylesheet" href="/assets/css/mainpost.css">
   <link rel="stylesheet" href="/assets/css/main.css">
+  <link rel="stylesheet" href="/assets/css/detail.css">
   <link rel="shortcut icon" href="/assets/img/favicon.png">
-
+  
 </head>
 <body id="page-top">
 <% include layouts/header%>
