Fix error Post not working

--- a/views/admin/manageUser.ejs
+++ b/views/admin/manageUser.ejs
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row justify-content-center" style="padding-top: 80px;">
         <div class="col-12 col-md-10 col-lg-8">
-            <form class="card card-sm">
+            <form class="card card-sm" id="form_search">
                 <div class="card-body row no-gutters align-items-center">
                     <div class="col-auto">
                         <i class="fas fa-search h4 text-body"></i>
