--- a/views/admin/manageUser.ejs
+++ b/views/admin/manageUser.ejs
@@ -4,17 +4,6 @@
         <div class="table100">
             <!--<div class="cloud-animation w-100" style="border:1px solid red; height:100px;background-image:url('assets/img/cloud.png')"></div>-->
             <h1 class='text-center mt-5 mb-4' style="font-size:60px;">Quản Lý Thành Viên</h1>
-                <table>
-                    <thead>
-                    <tr class="table100-head">
-                        <th scope="col" class='column2'>#</th>
-                        <th scope="col" class='column1'>Tên người dùng</th>
-                        <th scope="col" class='column3'>Số bài đăng</th>
-                        <th scope="col" class='column4'>Số điểm</th>
-<!--                        <th scope="col">Thao tác</th>-->
-<div class="container">
-    <div class="row justify-content-center" style="padding-top: 80px;">
-        <div class="col-12 col-md-10 col-lg-8">
             <form class="card card-sm">
                 <div class="card-body row no-gutters align-items-center">
                     <div class="col-auto">
@@ -30,20 +19,15 @@
             </form>
             <ul id="messages">
             </ul>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col">
-            <div class="shadow-lg d-block shadow text-center"
-                 style="width: 100%;min-height: 630px;margin-top: 20px;background-color: rgba(255,255,255,0.79);">
-                <h1>Quản Lý Thành Viên</h1>
-                <table class="table">
-                    <thead class="thead-light">
-                    <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Tên người dùng</th>
-                        <th scope="col">Số bài đăng</th>
-                        <th scope="col">Số điểm</th>
+            <br>
+                <table>
+                    <thead>
+                    <tr class="table100-head">
+                        <th scope="col" class='column2'>#</th>
+                        <th scope="col" class='column1'>Tên người dùng</th>
+                        <th scope="col" class='column3'>Số bài đăng</th>
+                        <th scope="col" class='column4'>Số điểm</th>
+<!--                        <th scope="col">Thao tác</th>-->
                     </tr>
                     </thead>
                     <tbody>
@@ -56,8 +40,8 @@
                             <td scope="col" class='column1'>
                                 <a href="/admin/manageUser/view/<%= userr._id %>"><%= userr.name %></a>
                             </td>
-                            <td scope="col"><%= userr.countPost %></td>
-                            <td scope="col"><%= userr.point %></td>
+                            <td scope="col" class="column3"><%= userr.countPost %></td>
+                            <td scope="col" class="column4"><%= userr.point %></td>
                         </tr>
                     <% i++ }) %>
                     </tbody>
