--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -47,7 +47,7 @@ ul, li {
 
 /* ------------------------------------ */
 input {
-    display: block;
+    display: inline;
     outline: none;
     border: none !important;
 }
