--- a/views/admin/detail.ejs
+++ b/views/admin/detail.ejs
@@ -3,7 +3,7 @@
                 <form style="padding-top: 70px;" method="post" action="sendmess?key=<%= poster._id %>">
                     <div class="form-group">
                         <h1 class="text-center" style="color: rgb(1,1,1);font-weight: bold;">Chi tiết bài đăng</h1>
-                        <p><%- statusList[poster.status] %></p>
+                        <p><span style="color:black; font-weight:bold">Trạng Thái: </span> <%- statusList[poster.status] %></p>
                         <input name="statusPost" type="hidden" value="<%= poster.status %>">
                     </div>
                     <% if (locals.message) { %>
@@ -27,14 +27,35 @@
                         %><div class="form-group"><a href="<%= poster.PostUrl %>" target="_blank">Liên kết đến bài viết</a></div>
                     <% } else {
                             %>
-                        <div class="form-group"><input type="checkbox" name="statusBox" <%= poster.status==2?"checked":0 %> >Từ chối bài đăng</div>
+                        <div class="form-group ">
+                            <label>
+                                <input class="check-custom toggle-switch" type="checkbox" name="statusBox" <%= poster.status== 2?"checked":0 %> >
+                                <span class="check-toggle"></span>
+                                <span style="font-weight: bold">Từ chối bài đăng</span>
+                            </label>
+                        </div>
                     <%
                     }
                     %>
                     <div class="form-group">
-                        <button class="btn btn-primary btn-lg" type="submit" style="width: 20%;">Send</button>
-                        <a href="/admin/listPost?filter=0" class="btn btn-dark btn-lg" style="width: 20%;">Cancel</a>
-                    </div>
+                            <div class="row">
+                                    <div class="col-md-6 col-lg-6 mb-3">
+                                        <div class="row">
+                                            <div class="col-md-6"></div>
+                                            <div class="col-md-6">
+                                                <button class="btn btn-primary btn-lg w-75" type="submit" style="width: 20%;">Send</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 col-lg-6 mb-3">
+                                            <div class="row">
+                                                <div class="col-md-6" >
+                                                    <a href="/admin/listPost?filter=0" class="btn btn-dark btn-lg w-75" style="width: 20%;">Cancel</a>
+                                                </div>
+                                            </div>
+                                    </div>
+                            </div>
+                        </div>
                 </form>
             </div>
         </div>
