--- a/views/admin/manageUser.ejs
+++ b/views/admin/manageUser.ejs
@@ -20,7 +20,7 @@
             <ul id="messages">
             </ul>
             <br>
-                <table>
+                <table id="listUser">
                     <thead>
                     <tr class="table100-head">
                         <th scope="col" class='column2'>#</th>
@@ -30,7 +30,7 @@
 <!--                        <th scope="col">Thao tác</th>-->
                     </tr>
                     </thead>
-                    <tbody>
+                    <tbody id="person">
                     <%
                         var i = (current == 1) ? 1 : (current - 1) * 10 + 1;
                         users.forEach(userr => {
@@ -48,7 +48,7 @@
                 </table>
                 <br>    
                 <% if (locals.pages && pages > 2) { %>
-                    <ul class="pagination" style="justify-content: center;">
+                    <ul class="pagination" id="phantrang" style="justify-content: center;">
                         <% if (current == 1) { %>
                             <li class="page-item disabled"><a class="page-link">Trang Đầu</a></li>
                         <% } else { %>
